# pomo

./: README.md  package.json
.github/workflows/: node.js.yml
public/: splashscreen.html
src/: App.jsx  main.jsx  routes.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/Pages/Pomodoro/: index.jsx
src/app/: store.js
src/components/ButtonPrimary/: index.jsx
src/components/ButtonRest/: index.jsx
src/components/ButtonSecondary/: index.jsx
src/components/ControlTimerButton/: index.jsx
src/components/GlobalStyles/: index.jsx
src/components/Input/: index.jsx
src/components/Loading/: index.jsx
src/components/MenuTools/: index.jsx
src/components/Pages/Pomodoro/: index.jsx
src/components/Timer/: index.jsx
src/components/Title/: index.jsx
src/components/Titlebar/: index.jsx
src/hooks/: useValidationForm.js
src/pages/Pomodoro/: index.jsx
src/pages/Settings/: index.jsx
src/redux/: pomodoroSlice.js  timeSlice.js
src/utils/: constants.js  constants.jsx
