[package]
name = "pomo-code"
version = "0.0.1"
description = "PomoCode is a timer app that use the technique of pomodoro."
authors = ["Matheus Canovas Almeida Santos"]
license = ""
repository = "https://github.com/devcanovas/pomo-code"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "system-tray", "window-close", "window-unminimize", "window-minimize", "window-start-dragging", "window-unmaximize", "window-show", "window-maximize", "window-hide", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
